#2609 Minor improvements.